# studia_WSB

./: .gitignore  README.md  tic_tac_toe_history.txt
Algorytmy_i_Struktury_Danych/: Diagram bez tytułu.drawio  README.md  Zad3.drawio  Zad4.drawio  Zad5.drawio  zad1.drawio  zad2.drawio  zad6.drawio  zad7.drawio  zad8.drawio
Algorytmy_i_Struktury_Danych/pomoce/: AiSD_lab2_rozwiązania_zadań_wykonanych_na_zajęciach.html  lab2-sciąga.py  lab3-algo.py
Algorytmy_i_Struktury_Danych/zadania/: 153790_lab2.py  153790_lab3.py
Algorytmy_i_Struktury_Danych/zajecia/: lab3_zajecia.py  lab4_zajecia.py
Algorytmy_i_Struktury_Danych/zajęcia/: Lab3.py
Architektura/: Zad2.asm  Zad3.asm  zad1.asm
Metody numeryczne/: sales_data.csv  test.py
Metody numeryczne/Laby/: 153790_lab1.py  (+4 more)
Od ludzi/: lab1.py
Projektowanie_interfejsów_UI/: README.md
Prolog/: filmy.pl
Python/: README.md
Python/intro/zad_3/: .python-version  LICENSE  README.md  Zadanie3_153790.docx  pyproject.toml  requirements.txt  run_my_awesome_lib.py  setup.py
Python/intro/zad_3/my_awesome_lib/: __init__.py  data_utils.py  math_tools.py  text_processing.py
Python/intro/zad_3/tests/: __init__.py  test_data_utils.py  test_math_tools.py  test_text_processing.py
Systemy Operacyjne/: cut.py  file.csv  file2.csv  head.py  tail.py
Wstep_do_AI/: README.md  california_housing.py  wyniki_modeli.xlsx
programowanie zaawansowane/: filmy_genealogia_153790.pl  porty_153790.cpp  sortowanie_153790.lips
zadania/: 153790_lab1.py  153790_lab2.py
zajęcia/: Laboratorium_1_zajecia.py  Laboratorium_2_zajecia.py  binarne.py
(+80 files in other folders)
